--- a/core/template/dashboard/apcups.html
+++ b/core/template/dashboard/apcups.html
@@ -1,5 +1,6 @@
-<div class="eqLogic-widget eqLogic allowResize apcups" style="height: #height#;width: #width#;background-color: #background_color#; padding : 0px; #style#" data-eqLogic_id="#id#" data-version="dashboard" >
-    <center><strong><a href="#eqLink#" style="size : 1.6em;"> #name#  </a></strong></center>
+  <div class="eqLogic-widget eqLogic allowResize" style="height: #height#;width: #width#;border:#border#;border-radius:#border-radius#;background-color: #background-color#;color: #color#;#style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="dashboard" >
+        <center><a href="#eqLink#" style="font-size : 1.5em;#hideEqLogicName#">#name_display#</a></strong></center><br />
+
     <div class="row">
     <div class="col-md-12">
         <div class="row"><div class="ups_status#id#"><center><b>#ups_model# : #ups_status#</b></center></div></div>
