--- a/core/template/mobile/apcups.html
+++ b/core/template/mobile/apcups.html
@@ -1,5 +1,5 @@
-<div class="eqLogic-widget eqLogic" style="background-color: #background_color#; padding : 0px; #style#" data-eqLogic_id="#id#" data-version="mobile" >
-    <center> #name# </center>
+<div class="eqLogic-widget eqLogic" style="width: 240px;border:#border#;border-radius:#border-radius#;background-color: #background-color#;color: #color#;#style#; padding : 0px;" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="mobile" >
+  <center> #name_display# </center>
     <center>#ups_model# : #ups_status#</center>
     <center><i class="techno-charging"></i> #battery_charge# % </center>
     <center><i class="fa fa-clock-o"></i> #battery_runtime# mn </center>
