--- a/core/template/dashboard/apcups.html
+++ b/core/template/dashboard/apcups.html
@@ -3,26 +3,26 @@
 
     <div class="row">
     <div class="col-md-12">
-        <div class="row"><div class="ups_status#id#"><center><b>#ups_model# : #ups_status#</b></center></div></div>
+        <div class="row"><div class="status#id#"><center><b>#model# :  #status#</b></center></div></div>
     </div>
     </div>
     <div class="row">
     <div class="col-md-6">
         <div class="row">
-            <div class="col-md-4 battery_charge#id#"><center><i class="techno-charging"></i></center></div><div class="col-md-8 battery_charge#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#battery_charge_id#"><b>#battery_charge# %</b></span></div>
+            <div class="col-md-4 bcharge#id#"><center><i class="techno-charging"></i></center></div><div class="col-md-8 bcharge#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#bcharge_id#"><b>#bcharge# %</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 battery_runtime#id#"><center><i class="fa fa-clock-o"></i></center></div><div class="col-md-8 battery_runtime#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#battery_runtime_id#"><b>#battery_runtime# mn</b></span></div>
+            <div class="col-md-4 timeleft#id#"><center><i class="fa fa-clock-o"></i></center></div><div class="col-md-8 timeleft#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#timeleft_id#"><b>#timeleft# mn</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 output_power#id#"><center><i class="fa fa-bolt"></i></center></div><div class="col-md-8 output_power#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#output_power_id#"><b>#output_power# W</b></span></div>
+            <div class="col-md-4 outpower#id#"><center><i class="fa fa-bolt"></i></center></div><div class="col-md-8 outpower#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#outpower_id#"><b>#outpower# W</b></span></div>
         </div>
     </div>
     <div class="col-md-6">
     	<div class="row">
-            <div class="col-md-4 input_current#id#"><center><i class="techno-cable1"></i></center></div><div class="col-md-8 input_current#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#input_current_id#"><b>#input_current# V</b></span></div>
+            <div class="col-md-4 linev#id#"><center><i class="techno-cable1"></i></center></div><div class="col-md-8 linev#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#linev_id#"><b>#linev# V</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 ups_load#id#"><center><i class="techno-courbes"></i></center></div><div class="col-md-8 ups_load#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#ups_load_id#"><b>#ups_load# %</b></span></div>
+            <div class="col-md-4 loadpct#id#"><center><i class="techno-courbes"></i></center></div><div class="col-md-8 loadpct#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#loadpct_id#"><b>#loadpct# %</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 battery_voltage#id#"><center><i class="fa fa-bolt"></i></center></div><div class="col-md-8 battery_voltage#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#battery_voltage_id#"><b>#battery_voltage# V</b></span></div>
+            <div class="col-md-4 battv#id#"><center><i class="fa fa-bolt"></i></center></div><div class="col-md-8 battv#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#battv_id#"><b>#battv# V</b></span></div>
         </div>
     </div>
 	</div>
@@ -31,8 +31,8 @@
 
 </style>
 <script>
-	if ('#ups_status#'.indexOf("sur batterie") > -1) {
-    	$('div.ups_status#id#').css('color','red');
+	if ('#status#'.indexOf("sur batterie") > -1) {
+    	$('div.status#id#').css('color','red');
     }
 
 </script>
