--- a/core/template/mobile/apcups.html
+++ b/core/template/mobile/apcups.html
@@ -1,10 +1,10 @@
 <div class="eqLogic-widget eqLogic" style="width: 240px;border:#border#;border-radius:#border-radius#;background-color: #background-color#;color: #color#;#style#; padding : 0px;" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="mobile" >
   <center> #name_display# </center>
-    <center>#ups_model# : #ups_status#</center>
-    <center><i class="techno-charging"></i> #battery_charge# % </center>
-    <center><i class="fa fa-clock-o"></i> #battery_runtime# mn </center>
-    <center><i class="jeedom-thermo-moyen"></i> #output_power# W </center>
-    <center><i class="techno-cable1"></i> #input_current# V </center>
-    <center><i class="techno-courbes"></i> #ups_load# % </center>
-    <center><i class="fa fa-bolt"></i> #battery_voltage# V </center>
+    <center>#model# : #status#</center>
+    <center><i class="techno-charging"></i> #bcharge# % </center>
+    <center><i class="fa fa-clock-o"></i> #timeleft# mn </center>
+    <center><i class="jeedom-thermo-moyen"></i> #outpower# W </center>
+    <center><i class="techno-cable1"></i> #linev# V </center>
+    <center><i class="techno-courbes"></i> #loadpct# % </center>
+    <center><i class="fa fa-bolt"></i> #battv# V </center>
 </div>
