--- a/core/template/dashboard/apcups.html
+++ b/core/template/dashboard/apcups.html
@@ -11,9 +11,9 @@
         <div class="row">
             <div class="col-md-4 bcharge#id#"><center><i class="techno-charging"></i></center></div><div class="col-md-8 bcharge#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#bcharge_id#"><b>#bcharge# %</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 timeleft#id#"><center><i class="fa fa-clock-o"></i></center></div><div class="col-md-8 timeleft#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#timeleft_id#"><b>#timeleft# mn</b></span></div>
+            <div class="col-md-4 timeleft#id#"><center><i class="fas fa-clock-o"></i></center></div><div class="col-md-8 timeleft#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#timeleft_id#"><b>#timeleft# mn</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 outpower#id#"><center><i class="fa fa-bolt"></i></center></div><div class="col-md-8 outpower#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#outpower_id#"><b>#outpower# W</b></span></div>
+            <div class="col-md-4 outpower#id#"><center><i class="fas fa-bolt"></i></center></div><div class="col-md-8 outpower#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#outpower_id#"><b>#outpower# W</b></span></div>
         </div>
     </div>
     <div class="col-md-6">
@@ -22,7 +22,7 @@
         </div><div class="row">
             <div class="col-md-4 loadpct#id#"><center><i class="techno-courbes"></i></center></div><div class="col-md-8 loadpct#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#loadpct_id#"><b>#loadpct# %</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 battv#id#"><center><i class="fa fa-bolt"></i></center></div><div class="col-md-8 battv#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#battv_id#"><b>#battv# V</b></span></div>
+            <div class="col-md-4 battv#id#"><center><i class="fas fa-bolt"></i></center></div><div class="col-md-8 battv#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#battv_id#"><b>#battv# V</b></span></div>
         </div>
     </div>
 	</div>
