--- a/core/template/mobile/apcups.html
+++ b/core/template/mobile/apcups.html
@@ -2,9 +2,9 @@
   <center> #name_display# </center>
     <center>#model# : #status#</center>
     <center><i class="techno-charging"></i> #bcharge# % </center>
-    <center><i class="fa fa-clock-o"></i> #timeleft# mn </center>
+    <center><i class="fas fa-clock-o"></i> #timeleft# mn </center>
     <center><i class="jeedom-thermo-moyen"></i> #outpower# W </center>
     <center><i class="techno-cable1"></i> #linev# V </center>
     <center><i class="techno-courbes"></i> #loadpct# % </center>
-    <center><i class="fa fa-bolt"></i> #battv# V </center>
+    <center><i class="fas fa-bolt"></i> #battv# V </center>
 </div>
