--- a/core/template/dashboard/apcups.html
+++ b/core/template/dashboard/apcups.html
@@ -1,5 +1,5 @@
   <div class="eqLogic-widget eqLogic allowResize norefresh" style="height: #height#;width: #width#;border:#border#;border-radius:#border-radius#;background-color: #background-color#;color: #color#;#style#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="dashboard" >
-        <center><a href="#eqLink#" style="font-size : 1.5em;#hideEqLogicName#">#name_display#</a></strong></center><br />
+        <center class="widget-name"><a href="#eqLink#" style="font-size : 1.5em;#hideEqLogicName#">#name_display#</a></strong></center><br />
 
     <div class="row">
     <div class="col-md-12">
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-md-4 bcharge#id#"><center><i class="techno-charging"></i></center></div><div class="col-md-8 bcharge#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#bcharge_id#"><b>#bcharge# %</b></span></div>
         </div><div class="row">
-            <div class="col-md-4 timeleft#id#"><center><i class="fas fa-clock-o"></i></center></div><div class="col-md-8 timeleft#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#timeleft_id#"><b>#timeleft# mn</b></span></div>
+            <div class="col-md-4 timeleft#id#"><center><i class="fas fa-clock"></i></center></div><div class="col-md-8 timeleft#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#timeleft_id#"><b>#timeleft# mn</b></span></div>
         </div><div class="row">
             <div class="col-md-4 outpower#id#"><center><i class="fas fa-bolt"></i></center></div><div class="col-md-8 outpower#id#"><span class="cmd tooltips cmd cmd-widget" data-type="info" data-subtype="numeric" data-cmd_id="#outpower_id#"><b>#outpower# W</b></span></div>
         </div>
