fix missing class widget-name

--- a/core/template/mobile/apcups.html
+++ b/core/template/mobile/apcups.html
@@ -1,8 +1,8 @@
 <div class="eqLogic-widget eqLogic" style="width: 240px;border:#border#;border-radius:#border-radius#;background-color: #background-color#;color: #color#;#style#; padding : 0px;" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="mobile" >
-  <center> #name_display# </center>
+  <center class="widget-name"> #name_display# </center>
     <center>#model# : #status#</center>
     <center><i class="techno-charging"></i> #bcharge# % </center>
-    <center><i class="fas fa-clock-o"></i> #timeleft# mn </center>
+    <center><i class="fas fa-clock"></i> #timeleft# mn </center>
     <center><i class="jeedom-thermo-moyen"></i> #outpower# W </center>
     <center><i class="techno-cable1"></i> #linev# V </center>
     <center><i class="techno-courbes"></i> #loadpct# % </center>
